--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713761.md#1" target="_blank">美国安顾问：使用华为 即西方信息安全末日</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1177748633-150x120.jpg" align ="left"></a>美国川普（特朗普）的国家安全顾问奥布赖恩（Robert O’Brien）警告说，如果西方世界让华为参与建立5G网络，那就是民主世界的信息安全“世界末日”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712279.md#1" target="_blank">【翻墙必看】中共残杀“变节”间谍及家人</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/08/408171957939-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713494.md#1" target="_blank">中方加速买大豆 川普说贸易谈判进展好</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713494.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周一在白宫表示，美中的贸易谈判进展良好。中方当天也表明了达成协议的愿望，并与此同时加大了购买美国大豆的力度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:12 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713179.md#1" target="_blank">学者：慎防中共暗杀台总统候选人 制造混乱</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1183354844-150x120.jpg" align ="left"></a>随着台湾总统大选的逼近，外界日益关注中共对这场选举的干预。日本国际政治学者藤井严喜在12月8日便提出警告，台湾应当慎防中共暗杀总统候选人，迫使选举结果无效，并制造社会大混乱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 6:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712671.md#1" target="_blank">中国职篮法籍球员未看五星旗挨罚 网民吐槽</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712671.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-141607429-150x120.jpg" align ="left"></a>中国男子篮球职业联赛（CBA）一名法籍球员在比赛前的奏唱国歌仪式中，因为没有向五星旗行注目礼而被罚款人民币1万元。对此，网民纷纷留言加以吐槽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 3:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11712035.md#1" target="_blank">美中国专家出书 揭秘中共特工情报系统（上）</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11712035.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7c268796d7d315f3579f9ab201870bfc-150x120.jpg" align ="left"></a>最近中共特工王立强投诚澳洲，引发外界对中共情报系统在海外广泛活动的关注。美国国会及行政当局中国委员会（CECC）办公室副主任彼得?马蒂斯（Peter Mattis，中文名孟沛德）和马特?巴西（Matt Brazil）近日出书，揭露中共情报工作的历史、现状及手段。
+
+12月5日，美国战略与国际研究中心（Center for Strategic and In.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712431.md#1" target="_blank">美国防法案两党达共识 瞄准中车、大疆和华为</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712431.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/8ed5a47975ad438961f79f33b7d67f43-150x120.jpg" align ="left"></a>美国国会希望通过必须通过的国防授权法案，来阻止中国产巴士、列车车厢和大疆无人机进入美国。法案还涉及帮助加强台湾抵御中共的内容，以及针对华为的内容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712274.md#1" target="_blank">传香港四高官圣诞节前后被撤换</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712274.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080350552188-600x400-1-150x120.jpg" align ="left"></a>有港媒报导指，北京再考虑港府重组问责班子想法，要拿下四名民望低的官员。消息指，有可能在圣诞假前后会做出上述决定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 12:26 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711629.md#1" target="_blank">娄烨新片命运多舛 大陆上映日突遭撤档</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711629.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/GettyImages-1128920215-150x120.jpg" align ="left"></a>由娄烨执导、巩俐等主演的电影《兰心大剧院》，原本定于12月7日在大陆上映。但没想到，就在上映日当天，电影官方突然在微博宣布撤档。引发影迷猜测和热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 12:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712233.md#1" target="_blank">美新书曝中共处决“变节者”及其怀孕妻子</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712233.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/07/907231923212196-150x120.jpg" align ="left"></a>“对于北京某政府部门的员工来说，2011年最冷的一天不在冬天。而是那天早上，所有人被命令观看一位他们曾经的同志及其怀孕的妻子被处决的过程。被处决的人被揭露为美国中央情报局的间谍。两人在该部的内院被枪杀，整个枪杀过程在闭路电视上播放。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711587.md#1" target="_blank">【直播回放】蔡英文为亚洲民主人权奖颁奖</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/1901020406272378-600x443-1-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>12月10日是国际人权日，蔡英文总统出席“第14届亚洲民主人权奖颁奖典礼暨授勋”。《大纪元时报》将进行网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711732.md#1" target="_blank">涉黑及淫乱 黑龙江黑河前公安副局长被双开</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/liuxiuzhong-Web-Banner-1200x800-v1-150x120.jpg" align ="left"></a>中共黑龙江省黑河市公安局前党委委员、副局长刘修忠日前被“双开”并移送司法。刘修忠被指为黑恶势力充当“保护伞”，亦官亦商，淫乱、贪污、受贿等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711248.md#1" target="_blank">【新闻看点】北京再促贸谈 美新冷战成中共梦魇</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711248.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/d20c0deeb67e0f5d08c27baef874da53-150x120.jpg" align ="left"></a>中共商务部部长助理仁宏斌今天（12月9日）表示，希望尽快同美方达成一项协议。这是中方第一次公开说的这么明确。多方观点认为，美中之间的新冷战已经开始了，中共走进了死胡同。而川普很可能在顺承天意，扮演着中共垮台的推手角色。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:00 AM							</td></tr>
@@ -21,23 +33,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11709100.md#1" target="_blank">因撑港新专辑遭中共封杀 董事长乐团霸气回应</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11709100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1903281058132483-150x120.jpg" align ="left"></a>成军逾20年的台湾“董事长乐团”近期疑因力挺香港的“反送中”运动，上月底推出的第13张专辑《风中浮沉的花蕊》传遭大陆数位音乐平台下架。对此，贝斯手钧董（林大钧）在facebook（fb）霸气地写道：“帅喔，终于不用被听免费的了！”主唱吉董（吴永吉）更加霸气地回应：“（封杀）我们无所谓啦。愿荣光归香港！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11709179.md#1" target="_blank">海归博士遭羁押3年 114次庭审后被撤诉</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11709179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/007ESdUkly1g9h55xiwdyj313v0m6e81-150x120.jpg" align ="left"></a>海归清华博士、国内LED照明第一人孙夕庆，回国创业，陷入经济纠纷被告上法庭，历经114次庭审，在羁押1277天后，无罪释放，然而他自己创立的公司已经被掏空。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 6:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11709077.md#1" target="_blank">川普爱国者网站创始人赴港 支持抗议活动</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11709077.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-08-at-22.02.18-150x120.png" align ="left"></a>12月8日，国际人权日之际，香港80万人走上街头，继续向港府施压，要求回应“五大诉求”。“川普爱国者”（Donald Trump Patriots）网站创始人马克斯·林恩（Max Linn）专程从美国赶往香港，为港人助威加油。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 5:38 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708917.md#1" target="_blank">俞强声出逃 传与其父被毛泽东活活吓死有关</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708917.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/11/1211290826301497-150x120.jpg" align ="left"></a>中共间谍王立强出逃后，轰动了整个澳洲及台湾政界。随后，中共国安部高官俞强声出逃事件，也再次被外界关注。美媒称，俞强声出逃，可能与他父亲被毛泽东“活活吓死”有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 3:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11709015.md#1" target="_blank">中国出口未如预期 分析指中方想达协议</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11709015.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/31b38eb142199cfe97b7bf35bd1c4871-150x120.jpg" align ="left"></a>中共官方8日公布的数字显示，11月出口并没有如市场预期回归正值，而是同比下降1.1%。彭博社称，出口意外下降说明了为何中方想要达成第一阶段贸易协议。在全球需求已经疲弱之际，美国的关税加剧了对中国出口的冲击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 1:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708788.md#1" target="_blank">新版黄雀行动 秘密援助二百港人往台湾避难</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708788.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/191019104127100615-150x120.jpg" align ="left"></a>在台湾和香港，秘密援助香港抗议者的团体如雨后春笋一样发展起来，他们出钱出力，帮助抗议者逃离香港，目前已有200多名香港反送中抗议者到达台湾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 12:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708871.md#1" target="_blank">被曝是乐视网后台老板 李源潮曲线辟谣？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708871.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303142124402039-150x120.jpg" align ="left"></a>中共前国家副主席李源潮，被曝是乐视网的后台，曾被逼退到香港等消息后，李源潮疑通过亲共港媒辟谣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 12:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708850.md#1" target="_blank">圣诞节前 港人心里话：愿2020年实现普选</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708850.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080600032478-600x399-1-150x120.jpg" align ="left"></a>香港示威游行已有6个月之久。12月8日，80万人再次走上街头，打着“追究警暴、捍卫人权、五大诉求、缺一不可”的横幅。在经历了半年的街头抗议后，港人有哪些心里话想说呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 11:38 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707970.md#1" target="_blank">【翻墙必看】华为鲜为人知的内部运作秘密</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707970.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/VCG31N1083191584-1-600x400-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.【内幕】华为把“狼文化”带入加拿大
-正值华为计划把其美国研究中心迁往加拿大之际，华为加拿大分公司（多伦多）的前雇员接受《大纪元》的采访，揭示了华为不为人知的内部运作情况，包括党支部的运作，以及公司内部激烈的竞争环境。
-
-2.桂民海瑞典获奖 中共驻瑞大使威胁制裁遭批
-中共驻瑞典大使桂从友周三（4日）在哥德.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 9:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706387.md#1" target="_blank">【直播回放】12.8国际人权日 80万人大游行</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080559132478-600x399-1-150x120.jpg" align ="left"></a>香港民阵周日（12月8日）发起“国际人权日”集会大游行，呼吁全民上街，继续向港府施压，“五大诉求 缺一不可”。游行已获警方不反对通知书。新唐人电视台和《大纪元时报》将进行全程追踪和网络直播。请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 8:35 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708030.md#1" target="_blank">美防长：美军将调整兵力 防御重点转向中俄</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708030.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/180917-N-VI515-925-150x120.jpg" align ="left"></a>美国国防部长埃斯珀（Mark Esper）在周六（12月7日）表示，尽管中东仍有安全上的威胁，但他计划将美军的焦点转向与中俄两国的竞争上。他将从各地区撤出部分兵力，再重新部署在印太地区，也就是他认为最重要的战场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707294.md#1" target="_blank">国际人权日前 全球350万人要求法办江泽民</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707294.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/161001101729100311-150x120.jpg" align ="left"></a>今年是法轮功遭中共持续镇压迫害第20年。在国际人权日12月10日前夕，“全球声援中国民众控告江泽民迫害法轮功的刑事举报连署活动”总协调朱婉琪律师公布最新全球举报统计。从2015年7月到2019年12月5日，全球37个国家超过350万民众连署刑事举报，向中共最高检、最高法院举报江泽民迫害法轮功的反人类罪行，要求法办元凶江泽民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:52 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707915.md#1" target="_blank">【思想领袖】黄国桐：年轻人为整个香港抗争</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707915.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Huangguotong-HK-2019-1-150x120.png" align ="left"></a>近日，香港大律师黄国桐接受英文大纪元资深记者杨杰凯（Jan Jekielek）《美国思想领袖》的节目专访。黄国桐去警察局看望被捕的年轻抗议者，他说，年轻人表现得很坚强，而港警滥权要挟他们，所谓指控没有法律依据。港人争取的只是最低限度地保留香港的自主自由和人权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:43 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707901.md#1" target="_blank">中共办律师大会 20多法律团体联署斥其滥捕</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707901.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/181227033138100484-150x120.jpg" align ="left"></a>中共当局首次举办“世界律师大会”之际，包括香港的中国维权律师关注组在内的20多个国际律师协会、法律团体及法律人罕见联合发声明，指中国人权每况愈下，中共利用法律制度滥捕百万计人。与会的欧洲律师协会（CCBE）更已表明，将拒绝在“世界律师大会”会议文件上签字。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:42 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712789.md#1" target="_blank">中共非法关押律师等 美驻华大使发声明抨击</a><br></h3>12月10日是“国际人权日”。中共虽然签署了《世界人权宣言》，但从来未遵守相关承诺，中国人权状况每况愈下。美国驻华大使布兰斯塔德发声明抨击中共。而中共在广州举办的“世界律师大会”，更是严禁大陆维权律师到场。中国失踪律师的家属表示，对中共开这个大会感到“震惊和可笑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11710666.md#1" target="_blank">“焚书”重演？ 甘肃图书馆烧书并发照片</a><br></h3>日前，一则甘肃庆阳市镇原县图书馆在10月分对馆藏“非法出版物”、宗教出版物集中焚毁并配发照片的报道引起争议。
 知名作家章诒和质疑，焚书事关中国文化命脉，“谁批准的？谁签的字？”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 6:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11710095.md#1" target="_blank">广东省国资委前党委副书记张小刚落马</a><br></h3>12月9日，中共广东省国资委前党委副书记、省国资委巡视员张小刚，涉嫌严重“违纪违法”被调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 3:43 PM							</td></tr>
