--- a/gb/ncid278_2.md
+++ b/gb/ncid278_2.md
@@ -1,1 +1,37 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td VALIGN=TOP><p><a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/nexmjc248/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nexmjc248/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nexmjc248/djy/blob/master/gb/nf4786.md#1">神韵</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nexmjc248/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705837.md#1" target="_blank">法官称赞的好人 法轮功学员李贺芹身陷囹圄</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705837.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1512021317582483-600x400-150x120.jpg" align ="left"></a>天津市宁河区法轮功学员李贺芹于11月13日被宁河区芦台镇派出所警察绑架并非法抄家。绑架后李贺芹身体出现了严重的心脏病、高血压、还有囊肿，住进医院，被警察看管。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:42 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706362.md#1" target="_blank">冲破阻截 李文足等3人成功探望江天勇律师</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706362.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ELE_UJaUUAAqa6C-150x120.jpeg" align ="left"></a>中国维权律师江天勇出狱后，行动仍不自由。“709案”三位维权妻子们6日齐赴河南，成功探望江天勇后，她们感慨，江天勇遭严密监控，就像“从小监狱到了大监狱”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 11:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706291.md#1" target="_blank">中共躲在防火墙后“放炮” 瞄准香港抗议者</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/04/161681431-1-150x120.jpg" align ="left"></a>香港民众民主抗争至今，除了用身躯抵挡橡皮弹、催泪弹外，西方媒体最近揭露，他们还必须用智慧抵抗中共发射的网络弹。网络专家表示，中共“大炮”正试图使连登（LIHKG）网站瘫痪，但不太可能成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706046.md#1" target="_blank">2021年全球监控摄像头达10亿 过半在中国</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706046.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1166233093-150x120.jpg" align ="left"></a>一份新的报告显示，到2021年，全球将有数以10亿的摄像头在监视这个世界，其中一半以上位于中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705480.md#1" target="_blank">哈尔滨阿城区前政法委书记王云飞被举报</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705480.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2015-7-16-minghui-dc-rally-02-150x120.jpg" align ="left"></a>曾任黑龙江省哈尔滨市阿城区政法委书记的王云飞，在任职期间对当地法轮功学员遭受的一切迫害负有主要责任，现已被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705987.md#1" target="_blank">中国开世界律师大会被讥讽 维权律师禁参与</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705987.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/111FotoJet_meitu_1-600x400-1-150x120.jpg" align ="left"></a>“世界律师大会”将于广州举行，但国内大部分律师都不批准出席，广州律协更要求当地的律师“噤声”，19个国际律师界团体呼吁中共释放所有因政治原因而被拘禁或监禁的律师。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 1:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700975.md#1" target="_blank">遭沙洋范家台监狱迫害 法轮功学员李大尧离世</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700975.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3374-150x120.jpg" align ="left"></a>近日，湖北省荆州市监利县法轮功学员李大尧被湖北省沙洋范家台监狱迫害致死，享年67岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11704872.md#1" target="_blank">覃永沛律师被批捕 中共侵犯人权新罪证</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11704872.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/03-98-600x400-150x120.jpg" align ="left"></a>覃永沛的妻子邓晓云表示，他做的事情是正确的，因为影响到一些人当官发财了，所以他们（当局）就压制他，“他做好人，有错吗？政府不帮，他来帮，就惹来这种灾祸。株连九族，没有人权人性可言。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705228.md#1" target="_blank">民阵公布12.8大游行路线细节 吁全民上街</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705228.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190617233359100484-600x400-150x120.jpg" align ="left"></a>本周日（12月8日），香港民阵发起国际人权日游行，呼吁全民上街 ，5日已获警方发出不反对通知书，但有诸多限制条件。今日（12月6日），民阵召集人岑子杰公布游行详情，并表示只要警方克制，游行就能和平进行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 6:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11704138.md#1" target="_blank">【拍案惊奇】李慧琼批港府 郑若骅们要出事？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11704138.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191206363t-150x120.jpg" align ="left"></a>今天我们要谈的内容很多，涉及到当局披露的，今年被大陆扣押过的香港人人数，同时民阵周日的大游行得到警方批准，这一次游行，也特别受瞩目。此外，郑若骅受伤，低调回港，此前她在北京经历了什么？李慧琼在立法会上大骂林郑管治团队，这说明了什么？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703901.md#1" target="_blank">华为失民心 孟晚舟鸡汤信败给李洪元251</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703901.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/10-5-150x120.jpg" align ="left"></a>中国电讯巨头华为的爱国光环褪色，“华为公主”孟晚舟的鸡汤文更收到中国网民的犀利回应：“小孟在豪宅忍辱负重，小李在看守所砥励前行”，横批“251”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703607.md#1" target="_blank">白马垄劳教所药物迫害 法轮功学员被致疯</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703607.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1403200625372320-600x400-150x120.jpg" align ="left"></a>湖南省长沙市望城县雷锋镇法轮功学员吴金平回忆，2008年，她被非法关押在白马垄女子劳教所期间，被强迫吃不明药物，三个月后完全精神失常，后经过修炼法轮功后，恢复了记忆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 9:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703462.md#1" target="_blank">送子上学途中遭绑架 哈尔滨母亲被判刑4年</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703462.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2014-08-10-homeless-e1569594401687-700x366-150x120.jpg" align ="left"></a>黑龙江省哈尔滨市法轮功学员林金丽今年4月24日送孩子上学的路上被警察绑架、构陷，非法判刑4年。林金丽已上诉到哈尔滨市中级法院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703602.md#1" target="_blank">【热点互动】251事件会成为华为的滑铁卢？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703602.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dd8865fa144798_ttl7dayQN6_d00e5415efdd629e-150x120.jpg" align ="left"></a>华为近日爆出前员工李洪元251事件，引舆论哗然。251事件会成为华为的滑铁卢？中共会放弃华为吗？此外，习近平幕僚称中共已走投无路。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703260.md#1" target="_blank">美媒：629名巴基斯坦女子被贩到中国当新娘</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703260.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1148931765-150x120.jpg" align ="left"></a>一张又一张的白纸上堆满了名字：来自巴基斯坦各地的629名女孩和妇女被卖到中国作新娘，屡屡雪上加霜，境遇凄惨。整理该清单的巴基斯坦调查人员决心破获这个将该国穷人和弱势群体作为贩卖对象的犯罪网络。没想到，他们调查的脚步却因两国之间“有利可图的”关系而被迫停止。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11702792.md#1" target="_blank">内蒙落马公安厅长马明 所涉迫害法轮功案例</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11702792.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ma-ming_1-150x120.jpg" align ="left"></a>据12月1日消息，内蒙古自治区公安厅厅长马明涉嫌严重“违纪违法”，目前已经被查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 10:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700918.md#1" target="_blank">广东八旬法轮功学员林作英面临非法庭审</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700918.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-2-150x120.jpg" align ="left"></a>广东省广州市天河区八旬法轮功学员林作英于7月9日外出时，被广州市公安局公共交通分局警察绑架，非法关押到广州市第一看守所。构陷她的案卷已转到广州市海珠区法院，法院拟定于12月12日对她进行非法庭审。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:15 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11702722.md#1" target="_blank">澳洲成立委员会 查外国势力藉社交媒体干政</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11702722.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/c098732f9da5c7128ae86118aeb6418a-150x120.jpg" align ="left"></a>澳大利亚正在多方面采取措施，来防止中共渗透和保护国家安全。12月5日澳洲宣布成立新的参议员委员会，着手调查外国势力透过脸书、推特、微信等社群媒体平台干涉澳洲政治的情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:06 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11701874.md#1" target="_blank">杭州访民维权十年无果 被当局绑架至黑监狱</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11701874.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13869068-150x120.jpg" align ="left"></a>杭州萧山区访民凤加文、凤雅两姊妹，因拆迁问题上访了十余年未获解决。今年9月，姊妹俩在朋友家作客，被突然闯进来的便衣（警察）绑架至萧山区看守所关押，并以判重刑胁迫签（拆迁）协议书。37天后凤加文被取保候审，凤雅至今还关押在看守所。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 3:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11701500.md#1" target="_blank">【拍案惊奇】移植“澳门模式”是香港解药？</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11701500.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dd522d77a3cc9b_ttl7dayTrr_bg1204-150x120.jpg" align ="left"></a>催泪烟“二噁英”含量低过BBQ！香港官员奇谈；澳门模式移植香港，会是解药吗？ 拿学生当坐垫，土瓜湾警察再“传奇”； 意大利决议挺港人......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700548.md#1" target="_blank">维权律师覃永沛遭批捕 声援民众遭当局打压</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700548.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/03-98-600x400-150x120.jpg" align ="left"></a>广西维权律师覃永沛被非法羁押在南宁市第一看守所已有月余。12月4日，他的妻子收到南宁市公安局发出的逮捕通知书，涉嫌罪名是“煽动颠覆国家政权罪”，参与声援的民众遭到当局打压。
+
+覃永沛于10月31日被抓，家人曾多次找南宁市国保要求了解案件的情况，均被以这是国家机密为由拒绝。
+
+他的妻子对大纪元记者说，当局阻挠律师会见，至今看守所内没有传出任何消息。“我.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 12:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700995.md#1" target="_blank">法轮功学员王德臣 遭呼兰监狱迫害致死</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700995.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-04-at-2.07.21-PM-150x120.png" align ="left"></a>2019年11月17日，哈尔滨市阿城区新华镇法轮功学员王德臣被非法关押3年半后，被呼兰监狱迫害致死，终年62岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700732.md#1" target="_blank">承德公安绑架34名法轮功学员 13人遭构陷</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/banner-600x400-150x120.jpg" align ="left"></a>10月20日，围场县公安局向围场县检察院非法起诉，13位法轮功学员被构陷到滦平县检察院。法轮功学员王永兴和陈海东在关押中出现病危状况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701080.md#1" target="_blank">美专家：若消息属实 向心夫妇或自愿留台湾</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11701080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Capture-2-150x120.jpg" align ="left"></a>中共情报人员王立强投诚澳洲后，在国际社会激起了巨大反响。王立强指证的上司中创董事会主席向心、龚青夫妇，在离境台湾时，被移送台北地检署复查，被限制出境、出海。最新消息透露，向心、龚青夫妇选择自愿留在台湾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700616.md#1" target="_blank">当中国人的代价 台作家：或莫名其妙人间蒸发</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/019-09-11.58-150x120.jpg" align ="left"></a>作家苦苓4日在脸书《做中国人有什么不好？》一文指出，从2016年到现在，海基会接到149件台湾人在中国失踪的陈情案，目前还有67件毫无音讯。台湾人到中国都会莫名其妙地“人间蒸发”，更不要说中国人本身了，光是维权律师目前就有一百多名行踪不明，“在中国，法律一向只用来制裁你、而不是保护你，这就是做一个中国人的代价。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700578.md#1" target="_blank">TikTok被告上美法庭 下载量惊人市值曝光</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700578.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-1073256664-150x120.jpg" align ="left"></a>上周三（11月27日），中国“抖音”国际版TikTok有超过一百名国际用户在加利福尼亚州北区地方法庭提起诉讼，TikTok及其母公司“字节跳动”等共四个相关实体面临八项指控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11699072.md#1" target="_blank">台湾达人制乐高版MV呈现《愿荣光归香港》</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11699072.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-3-150x120.jpg" align ="left"></a>台湾一位乐高达人，使用乐高积木，呈现出近期香港人民在“反送中”事件中，为了公义而拒绝沉默，并选择不再退缩走上街头的画面。并搭配歌曲《愿荣光归香港》（Glory to Hong Kong），将人民争取“民主及自由”的感人画面制成一部乐高版的MV。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11698859.md#1" target="_blank">【十字路口】反送中运动 十大片段触动人心(下)</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11698859.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dd2fa0b8607d47_ttl7dayrto_20191202-____-___-150x120.jpg" align ="left"></a>在上一集节目，我们跟大家分享了近期发生的“香港十大动人片段”的前五个片段，今天，我们要继续跟大家分享其它五个片段。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:38 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700408.md#1" target="_blank">公主岭新生监狱电刑“约束带”害法轮功学员</a><br></h3>吉林省公主岭新生监狱使用电刑加“约束带” 残忍迫害法轮功学员，逼迫他们放弃修炼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:31 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11700166.md#1" target="_blank">79岁法轮功学员韩俊毅 遭国保抄家绑架</a><br></h3>云南昆明市79岁的法轮功学员韩俊毅老太太在11月24日上午出门后，家里的法轮功书籍都被当地“610”和国保抢劫走。她到派出所询问时却被当场绑架。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:11 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_3.md#1">下一页</a></h3></td></tr>
+</table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/ncid278_2.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/ncid278_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_2.htm">http://www.epochtimes.com/gb/ncid278_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
