--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -21,7 +21,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/13/n11585704.md#1" target="_blank">无锡塌桥前 安徽一座大桥垮塌 断为三段</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/13/n11585704.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/7b9a7e1f7509feca0fb757febeb21c14-150x120.jpg" align ="left"></a>继江苏无锡一天桥倒塌后，安徽宣城市一座大桥也突然坍塌，尽管该事件未造成人员伤亡，但因为当地对外交通因此中断，令村民忧心水稻收成后无法及时卖出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 3:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/12/n11584668.md#1" target="_blank">辽宁1400头病猪埋田地 两千村民饮用污水</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/12/n11584668.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/IMG_8850-e1570923398332-150x120.jpg" align ="left"></a>2018年10月，辽宁鞍山市台安县黄沙坨镇政府在鲶鱼泡村的农田掩埋1400头病猪，造成该村水污染，村民讨说法近一年无果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 8:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/12/n11584520.md#1" target="_blank">江西降雨少创历史纪录 鄱阳湖水位跌破十米</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/12/n11584520.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/VCG111253376742-150x120.jpg" align ="left"></a>一场大面积的干旱正在江西蔓延，已致全省11设区市71县（市、区）312.3万人受灾。7月下旬以来，该省降雨量排有记录以来倒数第一位。江西境内中国最大淡水湖鄱阳湖水位跌破10米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 5:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/12/n11584444.md#1" target="_blank">广西玉林发生5.2级地震 香港逾千人报震感</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/12/n11584444.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/72644362_2453364248087533_228575088591503360_n-150x120.png" align ="left"></a>据中国地震台网发布消息，10月12日22时55分在广西玉林北流市发生5.2级地震。远在380公里之外的香港也有震感，当地多区市民纷纷报告震情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 2:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/14/n11654973.md#1" target="_blank">在北京确诊两名鼠疫患者 一人病情危重</a><br></h3>近日，两名内蒙古患者在北京被确诊为鼠疫的消息引发广泛关注。《新京报》14日最新报导称，目前一名患者病情危重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/12/n11651047.md#1" target="_blank">北京确认内蒙古2人染鼠疫</a><br></h3>北京市朝阳区政府12日晚通报，内蒙古锡林郭勒盟苏尼特左旗有2人经诊断为“肺鼠疫”确诊病例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 2:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/5/n11634752.md#1" target="_blank">深圳宝安国际机场高架桥线缆起火 浓烟滚滚</a><br></h3>11月5日中午12时左右，深圳宝安国际机场一座高架桥起火，暂时未造成人员伤亡。消防部门称，起火点是高架桥下的线缆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 5:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/10/30/n11621449.md#1" target="_blank">81天无雨土地干裂 江西安徽旱情严重</a><br></h3>七月下旬以来，大陆江西、安徽省持续高温且无降雨。官方称，平均无雨日有81天，江西、安徽各地发生严重旱情，部分地区出现特级旱情，土地龟裂、水稻枯死，农民损失惨重；江河湖库水位持续下级，部分地区出现民众饮水困难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 4:49 PM							</td></tr>
